--- a/.classpath
+++ b/.classpath
@@ -7,8 +7,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib"/>
-	<classpathentry kind="lib" path="C:/Users/Kyler/git/NoPointers/lib/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Kyler/git/NoPointers/lib/json-simple-4.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Kyler/git/NoPointers/lib/sqlite-jdbc-3.43.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/json-simple-4.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.43.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
