--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ dependencies {
             {
                 exclude group: 'org.hamcrest', module: 'hamcrest-core'
             }
+
+    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
+    implementation 'io.github.palexdev:materialfx:11.16.1'
 }
 
 test {
