--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
 }
+run
+        {
+            standardInput = System.in
+
+        }
 
 jar {
     manifest {
