--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ dependencies {
 
     implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
     implementation 'io.github.palexdev:materialfx:11.16.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 test {
