--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,11 +27,11 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '17'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-      with:
-        arguments: build
+        distribution: 'corretto'
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+    - name: Execute Gradle build
+      run: ./gradlew build
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
