--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,8 +30,8 @@ jobs:
         distribution: 'corretto'
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
-    - name: Execute Gradle build
-      run: ./gradlew build
+    - name: Run tests
+      run: ./gradlew test
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
