--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,7 @@ permissions:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -30,8 +30,10 @@ jobs:
         distribution: 'corretto'
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
+      with:
+         gradle-version: 8.3
     - name: Run tests
-      run: ./gradlew test
+      run: ./gradle test
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
