--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,7 +33,7 @@ jobs:
       with:
          gradle-version: 8.3
     - name: Run tests
-      run: ./gradle test
+      run: gradle test
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
