--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,3 +38,8 @@ jobs:
       uses: codecov/codecov-action@v3
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      with:
+        directory: ./coverage/reports
+        file: coverage.xml
+        flags: test
+        
