--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,7 +33,7 @@ jobs:
       with:
          gradle-version: 8.3
     - name: Run tests
-      run: gradle testCoverage
+      run: gradle test
     - name: Add coverage to PR
       id: jacoco
       uses: madrapps/jacoco-report@v1.6.1
