--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,9 +14,10 @@ on:
     branches: [ "develop" ]
 
 permissions:
-  actions: read
+  id-token: write
   contents: read
-  security-events: write
+  issues: write
+  pull-requests: write
 
 jobs:
   build:
