--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       with:
-        directory: ./build/reports/jacoco
+        directory: ${{ github.workspace }}/**/build/reports/jacoco/**/
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         
