--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,9 +41,8 @@ jobs:
       id: jacoco
       uses: madrapps/jacoco-report@v1.6.1
       with:
-        paths: |
-          ${{ github.workspace }}/**/prodNormalDebugCoverage.xml,
-          ${{ github.workspace }}/**/debugCoverage.xml
+        paths:
+          ${{ github.workspace }}/codecov.xml
         token: ${{ secrets.GITHUB_TOKEN }}
         min-coverage-overall: 0
         min-coverage-changed-files: 0
