--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       with:
-        files: ./build/reports/testCoverage.xml
+        file: build/coverageReport/jacocoTestReport.xml
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         
