--- a/build.gradle
+++ b/build.gradle
@@ -89,8 +89,8 @@ test {
 }
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled false
+        xml.required = true
+        html.required = false
     }
     dependsOn test // tests are required to run before generating the report
 }
