--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,8 +33,12 @@ jobs:
       with:
          gradle-version: 8.3
     - name: Run tests
-      run: ./gradlew test
+      run: gradle test
+    - name: Run JaCoCo test report
+      run: gradle jacocoTestReport
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
+      with:
+        file: build/reports/jacoco/test/jacocoTestReport.xml
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
