--- a/codecov.yml
+++ b/codecov.yml
@@ -10,5 +10,7 @@ coverage:
   status:
     project:
       default:
-        target: auto
-        threshold: 10%
+        target: 0%
+    patch:
+      default:
+        target: 0%
