--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
+    id 'com.github.johnrengelman.shadow' version "7.1.2"
 
 }
 run
@@ -14,6 +15,15 @@ run
             args = ["cli"]
 
         }
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class': 'nopointers.Main'
+    }
+
+    baseName = 'UML'
+}
+
 jar {
     manifest {
         attributes(
@@ -26,7 +36,7 @@ jar {
 }
 
 group 'com.example'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -110,6 +120,22 @@ jlink {
     launcher {
         name = 'app'
     }
+}
+
+task shell(dependsOn: 'testClasses', type: JavaExec) {
+    group = 'help'
+    description 'Runs an interactive shell with all runtime dependencies. "Use with gradle -q shell".'
+    standardInput = System.in
+    main = 'nopointers.Main' 
+    // using Main directly has ansi issues (some keyboard keys not working)
+    // main = 'org.codehaus.groovy.tools.shell.Main'
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs = []
+    // workingDir =
+    // standardOutput = System.out
+    // stops after eval, not useful now (maybe will change with Groovy >= 2.3.2)
+    // args = ["load $rootDir/integration-test/src/main/groovy/GroovyshStartup.groovy"]
+
 }
 
 jlinkZip {
