--- a/build.gradle
+++ b/build.gradle
@@ -6,23 +6,15 @@ plugins {
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
-    id 'com.github.johnrengelman.shadow' version "7.1.2"
+
 
 }
 run
         {
             standardInput = System.in
-            args = ["cli"]
+
 
         }
-
-shadowJar {
-    manifest {
-        attributes 'Main-Class': 'nopointers.Main'
-    }
-
-    baseName = 'UML'
-}
 
 jar {
     manifest {
@@ -91,10 +83,6 @@ dependencies {
 
     }
 
-
-
-
-
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
     implementation("com.googlecode.json-simple:json-simple:1.1.1")
@@ -126,7 +114,13 @@ task shell(dependsOn: 'testClasses', type: JavaExec) {
     group = 'help'
     description 'Runs an interactive shell with all runtime dependencies. "Use with gradle -q shell".'
     standardInput = System.in
-    main = 'nopointers.Main' 
+    doFirst{
+        if(getProperty('org.gradle.daemon') == true)
+        {
+            throw new IllegalStateException('shell with gradle daemon')
+        }
+    }
+    main = 'nopointers.Main'
     // using Main directly has ansi issues (some keyboard keys not working)
     // main = 'org.codehaus.groovy.tools.shell.Main'
     classpath = sourceSets.main.runtimeClasspath
