--- a/codecov.yml
+++ b/codecov.yml
@@ -6,6 +6,7 @@ ignore:
   - "src/main/java/nopointers/NewPuzzleCommand.java"
   - "src/main/java/nopointers/Command.java"
   - "src/main/java/nopointers/CommandHistory.java"
+  - "src/main/java/nopointers/AutoCompleter.java"
 
 coverage:
   status:
