--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ plugins {
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
-    id 'jacoco'
+    id 'com.github.johnrengelman.shadow' version "7.1.2"
+
 }
 run
         {
@@ -14,6 +15,14 @@ run
 
 
         }
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class': 'nopointers.Main'
+    }
+
+    baseName = 'UML'
+}
 
 jar {
     manifest {
@@ -28,8 +37,6 @@ jar {
 
 group 'com.example'
 version '1.0.0'
-
-apply plugin: 'jacoco'
 
 repositories {
     mavenCentral()
@@ -84,6 +91,10 @@ dependencies {
 
     }
 
+
+
+
+
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
     implementation("com.googlecode.json-simple:json-simple:1.1.1")
@@ -101,16 +112,7 @@ dependencies {
 }
 
 test {
-    useJUnitPlatform()
-    finalizedBy jacocoTestReport
-}
-jacocoTestReport {
-    reports {
-        xml.required = true
-        html.required = false
-    }
-    dependsOn test // tests are required to run before generating the report
-}
+    useJUnitPlatform()}
 
 jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
@@ -124,13 +126,7 @@ task shell(dependsOn: 'testClasses', type: JavaExec) {
     group = 'help'
     description 'Runs an interactive shell with all runtime dependencies. "Use with gradle -q shell".'
     standardInput = System.in
-    doFirst{
-        if(getProperty('org.gradle.daemon') == true)
-        {
-            throw new IllegalStateException('shell with gradle daemon')
-        }
-    }
-    main = 'nopointers.Main'
+    main = 'nopointers.Main' 
     // using Main directly has ansi issues (some keyboard keys not working)
     // main = 'org.codehaus.groovy.tools.shell.Main'
     classpath = sourceSets.main.runtimeClasspath
