--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
     id ("com.github.johnrengelman.shadow") version "8.1.1"
+    id 'jacoco'
 
 }
 run
@@ -39,6 +40,8 @@ jar {
 
 group 'com.example'
 version '1.0.0'
+
+apply plugin: 'jacoco'
 
 repositories {
     mavenCentral()
@@ -115,7 +118,16 @@ dependencies {
 }
 
 test {
-    useJUnitPlatform()}
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+jacocoTestReport {
+    reports {
+        xml.required = true
+        html.required = false
+    }
+    dependsOn test // tests are required to run before generating the report
+}
 
 jlink {
 
