--- a/codecov.yml
+++ b/codecov.yml
@@ -9,6 +9,10 @@ ignore:
   - "src/main/java/nopointers/AutoCompleter.java"
   - "src/main/java/nopointers/RankInfo.java"
   - "src/main/java/nopointers/GuessOutcome.java"
+  - "src/main/java/nopointers/CompletedState.java"
+  - "src/main/java/nopointers/EntryPoint.java"
+  - "src/main/java/nopointers/CompletedState.java"
+  - "src/main/java/nopointers/State.java"
 
 coverage:
   status:
